--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
+	"ownerNumber": "584120317720",
+	"ownerNumberr": "+584120317720",
 	"botnumber": "94767043432",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
@@ -11,7 +11,7 @@
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
+	"ownername": "© KURISUYA",
 	"botname":"「 Queen Alexa 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
