--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "994405032299",
-	"ownerNumberr": "+994405032299",
+	"ownerNumber": "5804120317720",
+	"ownerNumberr": "+5804120317720",
 	"botnumber": "994405032299",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
+	"wa": "wa.me/+5804120317720",
+	"donate": "5804120317720",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
 	"ownername": "© KURISUYA",
-	"botname":"「 Queen Alexa 」",
+	"botname":"「 GOD KURISUYA 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 GOD KURISUYA 」\n© KURISUYA"
 }
